@@ -1,5 +1,5 @@
 /*  dctrl-tools - Debian control file inspection tools
-    Copyright © 2003, 2005 Antti-Juhani Kaijanaho
+    Copyright © 2003, 2005, 2012 Antti-Juhani Kaijanaho
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -21,7 +21,6 @@
 #include <stdbool.h>
 #include <stdlib.h>
 #include <string.h>
-#include <sys/mman.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <unistd.h>
@@ -29,13 +28,7 @@
 #include "fsaf.h"
 #include "msg.h"
 
-#if !defined(_POSIX_MAPPED_FILES) || _POSIX_MAPPED_FILES == -1
-#  warning "No mmap support detected."
-#endif
-
 #define READAHEAD 1
-
-bool fsaf_mmap;
 
 FSAF * fsaf_fdopen(int fd, char const *fname)
 {
@@ -46,68 +39,32 @@ FSAF * fsaf_fdopen(int fd, char const *fname)
 	if (rv->fname == NULL) { errno = ENOMEM; free(rv); return 0; }
 	rv->fd = fd;
 	rv->eof_mark = (size_t)(-1);
-	rv->buf = 0;
-	rv->buf_capacity = 0;
 	rv->buf_offset = 0;
 	rv->buf_size = 0;
 	rv->invalid_mark = 0;
-#ifdef _POSIX_MAPPED_FILES
-	rv->mapped = false;
-	rv->topread = 0;
-#endif
 
 	struct stat stat;
         int res = fstat(fd, &stat);
-	if (res == -1) goto fail;
+	if (res == -1) {
+                free(rv);
+                return 0;
+        }
 
 	if (S_ISREG(stat.st_mode)) {
 		rv->eof_mark = stat.st_size;
-#ifdef _POSIX_MAPPED_FILES
-		if (fsaf_mmap) {
-			/* try mmapping, it is a regular file */
-			size_t eof_pagebound = pg_align(rv->eof_mark, true);
-			char * buf = mmap(0, eof_pagebound, PROT_READ,
-					  MAP_SHARED, fd, 0);
-			if (buf != MAP_FAILED) {
-				debug_message("mmapping", 0);
-				rv->mapped = 1;
-				rv->buf = buf;
-				rv->buf_capacity = eof_pagebound;
-				rv->buf_offset = 0;
-				rv->buf_size = rv->eof_mark;
-				//madvise(rv->buf, rv->buf_capacity,
-				//	MADV_SEQUENTIAL);
-			}
-		}
-#endif
 	}
 
-#ifdef _POSIX_MAPPED_FILES
-	if (!rv->mapped)
-#endif
-	{
-		rv->buf_capacity = 65536;
-		rv->buf = malloc(rv->buf_capacity);
-		if (rv->buf == 0) rv->buf_capacity = 0;
-	}
+        rv->buf_capacity = 65536;
+        rv->buf = malloc(rv->buf_capacity);
+        if (rv->buf == 0) rv->buf_capacity = 0;
 
 	return rv;
-fail:
-	free(rv);
-	return 0;
 }
 
 void fsaf_close(FSAF * fp)
 {
 	assert(fp != 0);
 
-#if _POSIX_MAPPED_FILES
-	if (fp->mapped) {
-		munmap(fp->buf, fp->buf_capacity);
-		free(fp);
-		return;
-	}
-#endif
 	free(fp->fname);
 	free(fp->buf);
 	free(fp);
@@ -181,34 +138,15 @@ struct fsaf_read_rv fsaf_read(FSAF * fp, size_t offset, size_t len)
 	/* Make sure we don't read past the EOF mark.  */
 	if (offset + len > fp->eof_mark) len = fp->eof_mark - offset;
 
-#if _POSIX_MAPPED_FILES
-	if (fp->mapped) {
-#if 0 /* madvise seems not to give a noteworthy efficiency boost */
-		/* Notify the kernel that we will soon want more of
-		 * the data, but do this only once for each page!  */ 
-		if (offset + len >= fp->topread) {
-			size_t base = align(offset - fp->buf_offset, 1);
-			size_t rl = READAHEAD * pagesize;
-			madvise(fp->buf + base, rl, MADV_WILLNEED);
-			fp->topread += rl;
-		}
-#endif
-	} else
-#endif
-	{
-		/* Ensure that we have enough data in the buffer.
-		 * This is only executed if we are not dealing with a
-		 * mapped file. */
-		assert(offset >= fp->buf_offset);
-		if (offset - fp->buf_offset + len > fp->buf_size) {
-			slurp(fp, offset - fp->buf_offset + len - fp->buf_size);
-			if (offset - fp->buf_offset + len > fp->buf_size) {
-				len = fp->buf_size - (offset - fp->buf_offset);
-			}
-		}
-		
-	}
-
+        /* Ensure that we have enough data in the buffer. */
+        assert(offset >= fp->buf_offset);
+        if (offset - fp->buf_offset + len > fp->buf_size) {
+                slurp(fp, offset - fp->buf_offset + len - fp->buf_size);
+                if (offset - fp->buf_offset + len > fp->buf_size) {
+                        len = fp->buf_size - (offset - fp->buf_offset);
+                }
+        }
+	
 	assert(offset - fp->buf_offset + len <= fp->buf_size);
 	assert(offset + len <= fp->eof_mark);
 	rv.b = fp->buf + (offset - fp->buf_offset);
@@ -220,14 +158,6 @@ void fsaf_invalidate(FSAF * fp, size_t offset)
 {
 	assert(fp->eof_mark >= offset);
 	if (fp->invalid_mark >= offset) return;
-
-#ifdef _POSIX_MAPPED_FILES
-	if (fp->mapped) {
-		size_t old = pg_align(fp->eof_mark - fp->buf_offset, 0);
-		size_t new = pg_align(offset - fp->buf_offset, 0);
-		madvise(fp->buf + old, new - old, MADV_DONTNEED);
-	}
-#endif	
 
 	fp->invalid_mark = offset;
 }
