@@ -110,7 +110,7 @@ static error_t parse_opt (int key, char * arg, struct argp_state * state)
 		break;
 	case OPT_MMAP:
 		debug_message("parse_opt: mmap", 0);
-		fsaf_mmap = 1;
+                /* ignore */
 		break;
 	case ARGP_KEY_ARG:
 		debug_message("parse_opt: argument", 0);
