@@ -13,8 +13,10 @@ dctrl-tools (2.23) UNRELEASED; urgency=low
   * tests/0022.{out,err,fails}: New test case, for grep-dctrl
     --ignore-parse-errors
   * tester.sh: Handle missing diffs gracefully.
+  * lib/fsaf.c and others: Remove mmap support (recognize but ignore --mmap).
+    It was only complicating matters without giving much benefit.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Fri, 08 Jun 2012 23:21:58 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sat, 09 Jun 2012 00:07:04 +0300
 
 dctrl-tools (2.22.2) unstable; urgency=low
 
